--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,57 @@
-.App {
-  text-align: center;
+.app-container {
+  display: flex;
+  height: 100vh;  /* Ensure full viewport height */
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.sidebar {
+  width: 250px;
+  transition: width 0.3s;
+  /* margin-top: 20px; */
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.sidebar.closed {
+  width: 60px;
+  margin-top: 20px;
+
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.main-content {
+  flex-grow: 1;
   display: flex;
   flex-direction: column;
+  transition: margin-left 0.3s;
+}
+
+.main-content.sidebar-open {
+  margin-left: 250px;
+}
+
+.main-content.sidebar-closed {
+  margin-left: 60px;
+}
+
+.header {
+  height: 10vh;
+  background-color: #f0f0f0;
+  /* border-bottom: 1px solid #ddd; */
+  display: flex;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  padding: 20px 30px;
+  transition: width 0.3s;
 }
 
-.App-link {
-  color: #61dafb;
+.header.sidebar-open {
+  margin-left: 250px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.header.sidebar-closed {
+  margin-left: 60px;
+}
+
+.content {
+  flex-grow: 1;
+  padding: 20px;
+  background-color: #f0f0f0;
+  overflow-y: auto;
+  transition: padding-left 0.3s;
 }
