--- a/src/components/Card1.css
+++ b/src/components/Card1.css
@@ -1,79 +1,74 @@
 /* Card1.css */
 .card1-app1 {
-  padding: 20px;
-  border-radius: 8px;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  background-color: #ffffff;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around;
-  width: 400px;
-  height: 300px;
+    border-radius: 8px;
+    background-color: #ffffff;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-content: center;
+    border: 1px solid #E8E8E8;
+    min-height: 300px;
+    padding: 10px 20px;
 }
 
 .card-header-app1 {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  margin: 0;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 0;
 }
 
 .secondary-text-app1 {
-  color: #7a7a7a;
-  font-family: Oskari G2;
-  font-size: 18px;
-  font-weight: 400;
-  text-align: left;
+    color: #7a7a7a;
+    font-family: Oskari G2;
+    font-size: 18px;
+    font-weight: 400;
+    text-align: left;
 }
 
 .primary-text-app1 {
-  color: #000000;
-  font-family: Oskari G2;
-  font-weight: 500;
+    color: #000000;
+    font-family: Oskari G2;
+    font-weight: 700;
 
 }
 
 .card-content-app1 {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
 .legend-app1 {
-  display: flex;
-  justify-content: space-between;
-  margin-top: 20px;
+    display: flex;
+    justify-content: space-between;
+    margin-top: 20px;
 }
 
 .legend-item1-app1 {
-  display: flex;
-  flex-direction: column;
-  align-items: baseline;
-  width: 100px;
-  height: 120%;
-  justify-content: space-around;
-  padding: 2px;
-  padding-left: 15px;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  border-radius: 8px;
-
-
+    display: flex;
+    flex-direction: column;
+    width: 125px;
+    border-radius: 8px;
+    padding: 10px;
+    margin: 6px;
+    border: 1px solid #E8E8E8;
 }
 
 .legend-color-app1 {
-  width: 16px;
-  height: 16px;
-  margin-right: 8px;
-  border-radius: 3px;
-  background-color: #ccc;
-  margin-bottom: 15px;
+    width: 16px;
+    height: 16px;
+    margin-right: 8px;
+    border-radius: 3px;
+    background-color: #ccc;
+    margin-bottom: 15px;
 }
 
 .total-amount-app1 {
-  margin-top: 20px;
-  font-size: 24px;
+    margin-top: 20px;
+    font-size: 24px;
 }
 
 .card-objective-app1 {
-  font-size: 12px;
+    font-size: 12px;
 }
