--- a/src/components/Card2.css
+++ b/src/components/Card2.css
@@ -1,8 +1,9 @@
-.card2-container {
-  width: 250px;
-  padding: 15px;
+.card2-app2 {
+  align-content: center;
+  border: 1px solid #E8E8E8;
+  min-height: 300px;
+  padding: 10px 20px;
   border-radius: 8px;
-  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
 }
 
 .card2-header {
