--- a/src/components/InfoSection.css
+++ b/src/components/InfoSection.css
@@ -6,7 +6,7 @@
   .card-content, .status-card {
     display: flex;
     align-items: center;
-    padding: 10px;
+    /* padding: 10px; */
   }
   
   .icon {
