--- a/src/components/Card2.css
+++ b/src/components/Card2.css
@@ -49,19 +49,20 @@
 
 .donut-ring {
   fill: transparent;
-  stroke: #e6e6e6;
-  stroke-width: 3;
+  stroke: #334BFF;
+  stroke-width: 8;
 }
 
 .donut-segment {
   fill: transparent;
-  stroke-width: 3;
-  stroke-linecap: round;
+  stroke-width: 8;
+  /* stroke-linecap: round; */
   transition: stroke-dasharray 0.6s;
 }
 
 .branded-segment {
-  stroke: #FBBC04;
+  stroke: #FD904B;
+  stroke-width: 8;
 }
 
 .legend {
@@ -85,11 +86,11 @@
 }
 
 .branded-dot {
-  background-color: #FBBC04;
+  background-color: #FD904B;
 }
 
 .non-branded-dot {
-  background-color: #1A73E8;
+  background-color: #334BFF;
 }
 
 .percentage {
